# resume-extractor

./: .env.example  .gitignore  README.md  generate_dummy_cv.py  graph.py  main.py  pyproject.toml  schema.py
